docs: add Design Decisions section to README